--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -306,11 +306,32 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   @include rounded_borders(#ccc, 1px, 0px);
 }
 
-.btn-info.btn-new {
+.btn-new {
+  color: #ffffff;
+  white-space: nowrap;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   @include background-linear-gradient(top,#DD5D8C,#d4346f);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
+  border-color: #DD5D8C #DD5D8C #DD5D8C;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #DD5D8C;
+  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
+
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
-.btn-new:hover, .btn-new:active {
+.btn-new:hover,
+.btn-new:active,
+.btn-new.active,
+.btn-new.disabled,
+.btn-new[disabled] {
+  color: #ffffff;
   background-color: #D8487D;
+  *background-color: #D8487D;
+}
+.btn-new:active,
+.btn-new.active {
+  background-color: #D8487D \9;
 }
 
 body .btn-primary {
