--- a/app/views/etkh_profiles/_profile.html.haml
+++ b/app/views/etkh_profiles/_profile.html.haml
@@ -33,13 +33,13 @@
                       %p= truncate(user.email, length: 40)
               .buttons
                 #contact
-                  = link_to "Contact", {controller: 'users', action: 'initalise_contact_user', user_id: user.id}, :remote => true, class: "btn btn-info btn-new", id: "contact-btn"
+                  = link_to "Contact", {controller: 'users', action: 'initalise_contact_user', user_id: user.id}, :remote => true, class: "btn btn-new", id: "contact-btn"
                 - if !user.external_linkedin.nil? && !user.external_linkedin.empty?
                   #linkedin-view
-                    = link_to "View LinkedIn profile", user.external_linkedin, class: "btn btn-info btn-new"
+                    = link_to "View LinkedIn profile", user.external_linkedin, class: "btn btn-new"
                 - if !user.linkedin_email.nil? && !user.linkedin_email.empty?
                   #linkedin-add
-                    = link_to "Add connection on LinkedIn", {controller: 'authentications', action: 'linkedin_invite_connection', email: user.linkedin_email, user_id: user.id}, remote: false, class: "btn btn-info btn-new"
+                    = link_to "Add connection on LinkedIn", {controller: 'authentications', action: 'linkedin_invite_connection', email: user.linkedin_email, user_id: user.id}, remote: false, class: "btn btn-new"
 
           .span4
             .right-block
