--- a/app/views/etkh_profiles/_search_form.html.haml
+++ b/app/views/etkh_profiles/_search_form.html.haml
@@ -27,7 +27,7 @@
           = text_field_tag :position
 
       .button
-        = submit_tag "Search", name: nil, id: "search-btn", class: "btn btn-info btn-new"
+        = submit_tag "Search", name: nil, id: "search-btn", class: "btn btn-new"
 
       .link
         = link_to "Advanced Search", "", remote: true, id: "advanced-search"
@@ -54,6 +54,6 @@
           = label_tag :position
           = text_field_tag :position, @position
       .button
-        = submit_tag "Search", name: nil, id: "search-btn", class: "btn btn-info btn-new"
+        = submit_tag "Search", name: nil, id: "search-btn", class: "btn btn-new"
       .link
         = link_to "Advanced Search", "", remote: true, id: "advanced-search"
