--- a/app/assets/stylesheets/profile_view.css.scss
+++ b/app/assets/stylesheets/profile_view.css.scss
@@ -117,8 +117,8 @@
           display: inline-block;
         }
         .btn-new {
-          //padding-left: 10px;
-          //padding-right: 10px;
+          padding-left: 10px;
+          padding-right: 10px;
         }
       }
     }
