Fixed bug with donation pledge bar on view profile page

--- a/app/views/etkh_profiles/show.html.haml
+++ b/app/views/etkh_profiles/show.html.haml
@@ -2,6 +2,7 @@
   = javascript_include_tag "view-profile.js"
   = javascript_include_tag "jquery.reveal.js"
   = javascript_include_tag "jquery.hoverIntent.minified.js"
+  = javascript_include_tag "bootstrap-progressbar.js"
 
 = render :partial => 'profile', :locals => { :profile => @profile }
 
