Changed css of buttons on view profile

--- a/app/assets/stylesheets/profile_view.css.scss
+++ b/app/assets/stylesheets/profile_view.css.scss
@@ -108,19 +108,21 @@
       }
 
       .buttons {
+        width: 480px;
+        overflow: hidden;
         position: absolute;
         bottom: 0;
         > * {
           display: inline-block;
         }
         .btn-new {
-          padding-left: 10px;
-          padding-right: 10px;
+         // padding-left: 10px;
+          //padding-right: 10px;
         }
       }
     }
     .right-block {
-      margin-right: 25px;
+      margin-right: 10px;
       .completeness {
       }
       .external-links {
