--- a/app/assets/stylesheets/authentications.css.scss
+++ b/app/assets/stylesheets/authentications.css.scss
@@ -58,10 +58,10 @@
   margin-top: 20px;
   #facebook, #google {
     margin-top: 5px;
-    display: inline-block;
-    img {
-      width: 40px;
-      height: 40px;
+    .small-icon img {
+      width: 50px;
+      height: 50px;
     }
   }
+  .signup { display: inline-block; }
 }
