--- a/app/views/etkh_profiles/remove_avatar.js.erb
+++ b/app/views/etkh_profiles/remove_avatar.js.erb
@@ -1,2 +1,3 @@
 var default_img_html = "<%= j(image_tag('profiles/avatar_default_96x96.png', :class=>'shadow')) %>";
 $("#user-avatar").replaceWith(default_img_html);
+$(".remove-photo").hide();
