--- a/app/views/donations/_form.html.haml
+++ b/app/views/donations/_form.html.haml
@@ -25,7 +25,7 @@
 
         = f.association :cause, :required => true, label: "Charity",
                         :hint => "cause not listed? #{link_to "add it here", new_cause_path }".html_safe
-        = f.input :currency, :collection => ['GBP','USD','EUR'], :as => :radio_buttons, :input_html => {:style => 'text-align: left'}, :checked => 'GBP'
+        = f.input :currency, :collection => Donation.major_currencies(Money::Currency.table).map{|c|c.upcase}, selected: "GBP"
         = f.input :amount, :required => true
       = f.input :date, :as => :string, :placeholder => 'yyyy-mm-dd', :hint => 'only add donations made after you joined 80,000 Hours', :required => true, :input_html => { id: 'datepicker' }
       #tracking
