--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,3 +1,4 @@
+- require 'rails_autolink'
 - depth = comment.get_depth
 %div{ id: "comment-#{comment.id}", class: depth > 0 ? "comment d#{depth}  nested-comment" : "comment d#{depth}" }
 
@@ -24,7 +25,7 @@
                                                            :remote => true 
       .clearfix
       .body
-        = markdown comment.body
+        = markdown auto_link(comment.body)
     - unless comment.body == "This comment has been deleted"
       .reply
         = link_to 'reply', '', class: "reply-link"
