Changes to members page algorithm and female prioritisation

--- a/app/views/etkh_profiles/_profile_teaser.html.haml
+++ b/app/views/etkh_profiles/_profile_teaser.html.haml
@@ -18,6 +18,7 @@
         - if !profile.nil? && !profile.organisation.nil?
           .organisation
             %p= profile.organisation
+        = profile.completeness_score
         %hr
 
       .body
