Added user option of displaying email address on profile

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -10,6 +10,8 @@
 
       %br
 
+      %input{ name: 'display_email', type: 'checkbox', checked: current_user.etkh_profile.display_email, style: 'margin-left: 100px;'} &nbsp; Display email address on profile to other members
+
       .email-notifications
         %h2 Email notifications
         %hr
