--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,7 @@
  *= require datepicker
  *= require comments
  *= require dashboard
+ *= require meet-the-team
  *= require_tree ./shared
  *= require modals
 */
