--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -99,11 +99,11 @@ header {
     font-size: 1.125em;
     font-family: $museo_slab_500;
     /*font-weight: bold;*/
-    line-height: 1.3333em;
+    /*line-height: 1.3333em;*/
     /*padding-top: 7px;*/
     float:left;
     color: white;
-    margin-right: 0px;
+    margin-right: 20px;
     width: 160px;
 
 
