--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         <!--<div class="row">-->
           <div class="span12">
 			      <div id='bootstrap-nav'>
-			        <%= link_to '80,000 Hours', '/', id: 'header-logo' %>
+			        <%= link_to image_tag('/assets/images/header/80kh_rect_logo.png'), '/', id: 'header-logo' %>
               <nav class='clearfix'>
                 <%= draw_menu( Page.top_level_menu, @page ) %>
               </nav>
@@ -110,7 +110,7 @@
               80,000 Hours is part of the Centre for Effective Altruism, a registered charity in England and Wales, Registered Charity Number 1149828
             </p>
             <p>
-              Centre for Effective Altruism, Oxford Uehiro Centre for Practical Ethics, Littlegate House, St Ebbes Street, Oxford OX1 1PT, UK, Earth, The Universe
+              Centre for Effective Altruism, Oxford Uehiro Centre for Practical Ethics, Littlegate House, St Ebbes Street, Oxford OX1 1PT, UK
             </p>
           </div>
         </div>
