--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,14 +21,16 @@
       </div>
     </div>
 
-    <a class="fp-splash-find-out-more btn btn-primary" href="/about-us">Learn more</a></div>
-
+    <a class="fp-splash-find-out-more btn btn-primary" href="/about-us">Learn more</a>
   </div>
 
-  <div class="span3"><a href="/about-us"><%= image_tag("/assets/images/front_page/advice_bubble2.jpg", width: "560", alt: "career advice speech bubble", style: "padding-top:6em;") %></a></div>
+  <div class="span3"><a href="/about-us"><%= image_tag("/assets/images/front_page/advice_bubble2.jpg", width: "560", alt: "career advice speech bubble", style: "padding-top:6em;") %></a>
+  </div>
+</div>
 
+<div class="row">
   <div class="span12">
-    <div class="row"><hr></div>
+    <hr>
   </div>
 </div>
 
