make homepage non CMS

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="span8">
     <div class="fp-splash">
-      <h1 id="you_want_to_make_a_difference__but_you_have_questions">We want you to change the world.</h1>
+      <h1 id="you_want_to_make_a_difference__but_you_have_questions">We Want You to Change the World</h1>
     </div>
 
     <div class="row">
@@ -16,12 +16,12 @@
     <div class="row">
       <div class="span7">
 	<div class="fp-splash">
-	  <p>And we won’t just tell you to “follow your passion”.</p>
+	  <p>And we won’t just tell you to 'follow your passion'.</p>
 	</div>
       </div>
     </div>
 
-    <a class="fp-splash-find-out-more btn btn-primary" href="/about-us">Learn more</a>
+    <a class="fp-splash-find-out-more btn btn-primary" href="/about-us">Find Out More</a>
   </div>
 
   <div class="span3"><a href="/about-us"><%= image_tag("/assets/images/front_page/advice_bubble2.jpg", width: "560", alt: "career advice speech bubble", style: "padding-top:6em;") %></a>
