--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,29 +2,35 @@
 <div class="row">
   <div class="span8">
     <div class="fp-splash">
-      <h1 id="you_want_to_make_a_difference__but_you_have_questions">We want you to change the world.</h1>
+      <h1 id="you_want_to_make_a_difference__but_you_have_questions">We Want You to Change the World</h1>
     </div>
+  </div>
+</div>
 
-    <div class="row">
-      <div class="span7">
-	<div class="fp-splash">
-	  <p>Based on the latest academic research, we offer in-depth advice to help you find the career where you can have the biggest possible positive impact.</p>
-	</div>
-      </div>
-    </div>
-      
-    <div class="row">
-      <div class="span7">
-	<div class="fp-splash">
-	  <p>And we won’t just tell you to “follow your passion”.</p>
-	</div>
-      </div>
-    </div>
-
-    <a class="fp-splash-find-out-more btn btn-primary" href="/about-us">Learn more</a>
+<div class="row">
+  <div class="span8">
+    <iframe id="big-video" width="640" height="360" src="http://www.youtube.com/embed/JQcfoboTomg" frameborder="0" allowfullscreen></iframe>
   </div>
 
-  <div class="span3"><a href="/about-us"><%= image_tag("/assets/images/front_page/advice_bubble2.jpg", width: "560", alt: "career advice speech bubble", style: "padding-top:6em;") %></a>
+  <div class="span1">
+    &nbsp;
+  </div>
+
+  <div class="span3">
+    <div class="fp-splash">
+      <p class="fp-sidebar">Based on the latest academic research, we offer in-depth advice to help you find the career where you can have the biggest possible positive impact.</p>
+
+      <p class="fp-sidebar">And we won’t just tell you to &#147;follow your passion&#148;.</p>    
+    </div>
+  </div>
+
+</div>
+
+
+
+<div class="row">
+  <div class="span4">
+    <a class="fp-splash-find-out-more btn btn-primary" href="/about-us">Find Out More</a>
   </div>
 </div>
 
