--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,7 +30,7 @@
 
 <div class="row">
   <div class="span4">
-    <a class="fp-splash-find-out-more btn btn-primary" href="/about-us">Find Out More</a>
+    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/about-us">Find Out More</a>
   </div>
 </div>
 
