--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -143,6 +143,9 @@ a.fp-splash-find-out-more {
   background: $link_color !important;
 
   font-family: $museo_sans_500;
+  margin-bottom: 20px;
+
+  max-width: 240px;
 
   &:visited {
     color: #fff !important;
@@ -156,7 +159,7 @@ a.fp-splash-find-out-more {
 }
 
 .btn-giant {
-  font-size: 200%;	
+  font-size: 160%;	
   padding: 18px 20px 12px 20px;
 }
 
