--- a/app/views/pages/video.html.erb
+++ b/app/views/pages/video.html.erb
@@ -2,14 +2,14 @@
 <div class="row">
   <div class="span8">
     <div class="fp-splash">
-      <h1 id="you_want_to_make_a_difference__but_you_have_questions">We Want You to Change the World</h1>
+      <h1 id="you_want_to_make_a_difference__but_you_have_questions"><%= @video_title %></h1>
     </div>
   </div>
 </div>
 
 <div class="row">
   <div class="span8">
-    <iframe id="big-video" width="640" height="360" src="http://www.youtube.com/embed/JQcfoboTomg" frameborder="0" allowfullscreen></iframe>
+    <iframe id="big-video" width="640" height="360" src="http://www.youtube.com/embed/<%= @video_id %>" frameborder="0" allowfullscreen></iframe>
   </div>
 
   <div class="span1">
@@ -26,19 +26,21 @@
 
 </div>
 
+
+
 <div class="row">
   <div class="span4">
     <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/pages/getting-started--2">Find Out More</a>
   </div>
-
   <div class="span1">
     &nbsp;
   </div>
-
   <div class="span4">
-    <a class="fp-splash-find-out-more btn btn-primary" href="/video/2">
-      Watch Our Next Video: Which Careers Do the Most Good?
-    </a>
+  <% if @video_no >= 3 %>
+    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/pages/get-coaching">Get Coaching</a>
+  <% else %>
+    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/video/<%= @video_no + 1%>">Next Video</a>
+  <% end %>
   </div>
 </div>
 
