--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,8 +36,8 @@
   </div>
 
   <div class="span4">
-    <a class="fp-splash-find-out-more btn btn-primary" href="/video/2">
-      Watch Our Next Video: Which Careers Do the Most Good?
+    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/video/2">
+      Next Video
     </a>
   </div>
 </div>
@@ -48,62 +48,9 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="span4"><a href="/career-advice">
-      <%= image_tag('/assets/icons/multibranch.svg', alt: "advice on careers that make a difference", height: "48", width: "51") %>
-  </a></div>
-
-<div class="span12">
-  <div class="row">
-    <div class="span12">
-      <div class="row">
-	<div class="span8">
-	  <div class="fp-splash">
-	    <h1 id="you_want_to_make_a_difference__but_you_have_questions">You want to make a difference. <br> But you have questions.</h1>
-	  </div>
-
-	  <div class="row">
-	    <div class="span4">
-	      <div class="fp-splash">
-		<p>Which <strong>jobs</strong> help people most? <br> Which <strong>subjects</strong> should I study?</p>
-	      </div>
-	    </div>
-
-	    <div class="span4">
-	      <div class="fp-splash">
-		<p>Who should I <strong>volunteer</strong> for? <br> Which <strong>charities</strong> should I give to?</p>
-	      </div>
-	    </div>
-
-	    <div class="span7">
-	      <div class="fp-splash">
-		<p>We’re here to help. At 80,000 Hours we share <strong>free, evidence-based advice</strong> on careers that make a difference.</p>
-		<a class="fp-splash-find-out-more btn btn-primary btn" href="/about-us">Learn more</a></div>
-	    </div>
-	  </div>
-	</div>
-
-	<div class="span3"><a href="/about-us"><img alt="career advice speech bubble" src="http://eightythousand.org.s3.amazonaws.com/assets/images/front_page/advice_bubble2.jpg" style="padding-top:6em;" width="560"></a></div>
-
-	<div class="span12">
-	  <div class="row"><hr></div>
-	</div>
-      </div>
-
-      <div class="row">
-	<div class="span4"><a href="/career-advice">
-	    <%= image_tag('/assets/icons/multibranch.svg', alt: "advice on careers that make a difference", height: "48", width: "51") %>
-	</a></div>
-
-	<div class="span4"><a href="/our-community">
-	    <%= image_tag("/assets/icons/community.svg", alt: "community of people making a difference", height: "48", width: "58") %>
-	</a></div>
-
-	<div class="span4"><a href="/">
-	    <%= image_tag("/assets/icons/speech_bubble_square.svg", alt: "mailing list about how to make the world a better place", height: "48", width: "70") %>
-	</a></div>
-      </div>
-
+<div>
+  <div>
+    <div>
       <div class="row">
 	<div class="span3">
 	  <div class="fp-splash">
@@ -161,5 +108,3 @@
   </div>
 </div>
 <% end %>
-
-
