--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,44 +1,70 @@
 <% cache do %>
 <div class="row">
-  <div class="span8">
-    <div class="fp-splash">
-      <h1 id="you_want_to_make_a_difference__but_you_have_questions">We Want You to Change the World</h1>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="span8">
-    <iframe id="big-video" width="640" height="360" src="http://www.youtube.com/embed/JQcfoboTomg" frameborder="0" allowfullscreen></iframe>
-  </div>
-
   <div class="span1">
     &nbsp;
   </div>
 
-  <div class="span3">
+  <div class="span9">
+    <div class="fp-splash">
+      <h1 id="you_want_to_make_a_difference__but_you_have_questions">We Want You to Change the World</h1>
+    </div>
+  </div>
+
+  <div class="span2">
+    &nbsp;
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="span1">
+    &nbsp;
+  </div>
+
+  <div class="span9">
     <div class="fp-splash">
       <p class="fp-sidebar">Based on the latest academic research, we offer in-depth advice to help you find the career where you can have the biggest possible positive impact.</p>
 
       <p class="fp-sidebar">And we won’t just tell you to &#147;follow your passion&#148;.</p>    
     </div>
   </div>
-
 </div>
 
 <div class="row">
-  <div class="span4">
-    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/pages/getting-started--2">Find Out More</a>
-  </div>
-
   <div class="span1">
     &nbsp;
   </div>
 
-  <div class="span4">
+  <div class="span9">
+    <iframe id="big-video" width="640" height="360" src="http://www.youtube.com/embed/JQcfoboTomg" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="span2">
+    &nbsp;
+  </div>
+</div>
+
+<div class="row">
+  <div class="span1">
+    &nbsp;
+  </div>
+
+  <div class="span3">
+    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/pages/getting-started--2">Find Out More</a>
+  </div>
+
+  <div class="span3">
+    &nbsp;
+  </div>
+
+  <div class="span3">
     <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/video/2">
       Next Video
     </a>
+  </div>
+
+  <div class="span2">
+    &nbsp;
   </div>
 </div>
 
