Add captcha question when messaging users

--- a/app/views/page_feedbacks/_form.html.erb
+++ b/app/views/page_feedbacks/_form.html.erb
@@ -14,7 +14,7 @@
   <%= f.hidden_field :page_id %>
   <div class="field">
     <%= f.label :rating %>
-    <%= f.select(:rating, ["Good","OK","Bad"]) %>
+    <%= f.select(:rating, ['Not useful', 'Slightly useful', 'Quite useful', 'Very useful']) %>
   </div>
 
   </br>
