--- a/app/views/users/initialise_contact_user.js.erb
+++ b/app/views/users/initialise_contact_user.js.erb
@@ -1,5 +1,5 @@
 // get contact_user partial html 
-var form_html = "<%= escape_javascript(render partial: 'users/contact_user', locals: { user_id: @user_id }) %>"
+var form_html = "<%= escape_javascript(render partial: 'users/contact_user', locals: { user_id: @user_id, captcha: @captcha }) %>"
 
 //show popup
 $popup = $("#contact-modal");
