--- a/app/assets/stylesheets/eightythousand.css
+++ b/app/assets/stylesheets/eightythousand.css
@@ -135,7 +135,9 @@ a.fp-splash-find-out-more {
   background: #d4346f !important;
   font-family: "MuseoSans-500", helvetica, arial, sans-serif;
   margin-bottom: 20px;
-  max-width: 240px; }
+  max-width: 300px;
+  line-height: 25px;
+  font-size: 12px; }
   a.fp-splash-find-out-more:visited {
     color: white !important; }
   a.fp-splash-find-out-more:hover {
@@ -150,19 +152,23 @@ a.fp-splash-find-out-more {
 
 .btn-feedback {
   background-color: #fafafa;
-  width: 55px; }
+  width: 34px;
+  font-size: 12px; }
   .btn-feedback:hover {
-    background-color: #f2f2f2; }
+    background-color: #ccc; }
+  .btn-feedback:visited {
+    background-color: #ccc; }
 
 .btn-giant {
-  font-size: 160%;
-  padding: 18px 20px 12px 20px; }
+  font-size: 120%;
+  padding: 12px 16px 8px 16px; }
 
 .right {
   float: right; }
 
-.reasonably-sized-textarea {
-  width: auto; }
+.auto-sized {
+  width: auto;
+  height: auto; }
 
 #content {
   color: #262626;
