Check changing stylesheet works

--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -168,7 +168,7 @@ a.fp-splash-find-out-more {
 }
 
 .btn-feedback {
-    background-color: #fafafa;
+    background-color: #888;
     width: 34px;
     font-size: 12px;
 
